# door-converter

./: CMakeLists.txt  README.md  build-debug.ps1  build-debug.sh  build-release.ps1  build-release.sh  build-run-debug.ps1  build-run-debug.sh  build-run-release.ps1  build-run-release.sh  door.py  run-debug.ps1  run-release.ps1  run.sh
src/: CMakeLists.txt  main.c  main.h
